# fablelayer

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAILURE_LOG.md  INTERFACE.md  NOTICE  README.ko.md  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
_workspace/: benchmark_schema.json  legal_review.md  qa_report.json  source_ledger.json
adapters/: README.md  lmstudio.md  ollama.sh  sillytavern.md
agents/: early-stop-prevention.md  evidence-gate.md  investigation-protocol.md  verification-grounding.md
bench/: README.md  RESULTS.md  fixtures_raw.json  raw.json  reproduce.sh
cli/: README.md  fablelayer
core/: README.md  procedure_spec.md  promptcore.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DPTD-ADHD.md  DPTD.md  INSTALL.md  MVP_PLAN.md
fablelayer/: __init__.py  adapters.py  benchmark.py  cli.py  evidence_gate.py  procedure.py  promptcore.py  router.py  source_policy.py
gates/: bench_integrity_gate.sh  completeness_gate.sh  license_gate.sh  perf_claim_gate.sh  preflight_gate.sh  publish_gate.sh  render_gate.sh  runtime_gate.sh  selftest.sh  verify_fablelayer.sh
hooks/: early-stop.sh  early-stop.test.sh
proof/: CLAIMS.md  EXPERIMENT_DESIGN.md  REPRODUCIBILITY.md  THREATS_TO_VALIDITY.md  verify_claims.py
skills/: router.md  skillpack.md
styles/: COST.md  drift-prevention.md  vff-v2.md
tests/: run_tests.py  test_adapters.py  test_benchmark.py  test_cli.py  test_evidence_gate.py  test_promptcore.py  (+2 more)
(+50 files in other folders)
